--- a/index.html
+++ b/index.html
@@ -21,47 +21,15 @@
       <span class = color id = red></span>
     </div>
   </section>
+  <div>Escolha um tamanho entre 5 e 50 blocos</div>
+  <div id = valor-atual></div>
   <span class="flexy-s">
     <input type="text" id = board-size min = 0 class="caixa-texto" placeholder="Escolha um valor entre 5 e 50">
   </span>
    <button id = generate-board>VQV</button>
    <div><button id = clear-board>Limpar</button></div>
   <section id = pixel-board>
-    <div>
-      <span class = pixel id = '00'></span>
-      <span class = pixel id = '01'></span>
-      <span class = pixel id = '02'></span>
-      <span class = pixel id = '03'></span>
-      <span class = pixel id = '04'></span>
-    </div>
-    <div>
-      <span class = pixel id = '10'></span>
-      <span class = pixel id = '11'></span>
-      <span class = pixel id = '12'></span>
-      <span class = pixel id = '13'></span>
-      <span class = pixel id = '14'></span>
-    </div>
-    <div>
-      <span class = pixel id = '20'></span>
-      <span class = pixel id = '21'></span>
-      <span class = pixel id = '22'></span>
-      <span class = pixel id = '23'></span>
-      <span class = pixel id = '24'></span>
-    </div>
-    <div>
-      <span class = pixel id = '30'></span>
-      <span class = pixel id = '31'></span>
-      <span class = pixel id = '32'></span>
-      <span class = pixel id = '33'></span>
-      <span class = pixel id = '34'></span>
-    </div>
-    <div>
-      <span class = pixel id = '40'></span>
-      <span class = pixel id = '41'></span>
-      <span class = pixel id = '42'></span>
-      <span class = pixel id = '43'></span>
-      <span class = pixel id = '44'></span>
-    </div>
+
   </section>
   <footer></footer>
   <script src="script.js"></script>
