--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="color" id="colorBlack"></div>
+        <div class="color selected" id="colorBlack"></div>
         <div class="color" id="color1"></div>
         <div class="color" id="color2"></div>
         <div class="color" id="color3"></div>
     </div>
 
-  <div id="container-pixels"></div>
+  <div id="pixel-board"></div>
  
 <script src="./script.js" type="text/javascript"></script>
 </body>
