--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <section id="color-palette"></section>
+  <section>
+    <button id="clear-board">Limpar</button>
+  </section>
   <section id="pixel-board"></section>
   <script type="text/javascript" src="script.js""></script>
 </body>
