--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <section id="color-palette"></section>
+  <button id="clear-board">Limpar</button>
   <section id="pixel-board">
   </section>
-  <button class="buttom">Limpar Cores</button>
   <script src="script.js"></script>
 </body>
 </html>
