--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div id = "color-palette"></div>
     <div id = "pixel-board"></div>
    
-<script src = "script.js"></script>
+    <button id ="clear-board">Limpar</button>
+<script type= "text/javascript" src = "script.js" async></script>
     
 </body>
 </html>
