--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="color azul" id="blue"></div>
         <div class="color verde" id="green"></div>
     </section>
-    <input type="button" value="Limpar" id="clear-board">
+    <button id="clear-board">Limpar</button>
     <section id="pixel-board">
         <div class="pixel align cor"></div>
         <div class="pixel align cor"></div>
