--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <section id="color-palette"></section>
 
-    <section id="pixel-board"></section>
+    <button id="clear-board">Limpar</button>
 
-    <button id="btn-reset">Limpar Board</button>
+    <section id="pixel-board"></section>
 
     <script src="script.js"></script>
 </body>
