--- a/index.html
+++ b/index.html
@@ -6,58 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="text/javascript" src="script.js"></script>
   <title>Projeto Pixels Art | Trybe</title>
 </head>
 
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette">
-    <div id="black" class="color"></div>
-    <div id="green" class="color"></div>
-    <div id="red" class="color"></div>
-    <div id="blue" class="color"></div>
   </div>
   <div id="pixel-board">
-    <table>
-      <tr>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
-      <tr>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
-      <tr>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
-      <tr>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
-      <tr>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
+    <table id="pixel-row">
     </table>
-
   </div>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
