--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <div id="color-palette"></div>
+  <div class="btn">
+    <button id="clear-board">Limpar</button>
+  </div>
   <div id="pixel-board"></div>
   <script src="script.js"></script>
 </body>
