--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <header><h1 id="title">  Paleta de Cores    </h1></header>
     <div id="color-palette">
-        <div class="color preto" >cor preta </div>
-        <div class="color vermelho">cor vermelha </div>
-        <div class="color azul">cor azul </div>
-        <div class="color lilas">cor violeta </div>
+        <div class="color " id="preto" >cor preta </div>
+        <div class="color " id="vermelho">cor vermelha </div>
+        <div class="color " id="azul">cor azul </div>
+        <div class="color " id="verde"">cor verde </div>
    
     </div>
     <div id="pixel-board">
-        <div class="pixel "></div>
+        <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
