--- a/index.html
+++ b/index.html
@@ -13,19 +13,56 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
-  <aside id="color-palette">          
-    <p class="color"></p>
-    <p class="color"></p>
-    <p class="color"></p>
-    <p class="color"></p>    
-  </aside>
   <section>
-    <table>
-      <tr>
-        </td>
-      </tr>
-    </table>
+    <div id="color-palette">
+      <div class="color selected"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>      
+    </div>             
   </section>
+  <nav>
+    <button id="clear-board">Limpar</button>
+  </nav>
+  <section>
+    <div id="pixel-board">
+      <div>  
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>    
+      <div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>  
+      <div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>  
+      <div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>  
+      <div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div> 
+    </div>      
+  </section>  
   <script src="script.js"></script>
 </body>
 
